# swithe

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/swithe/: notifier.py
