[metadata]
name = swithe
version = 0.0.1
author = Michał Grabowski
author_email = mkg.grabowski@gmail.com
description = Python util for sending notifications immediately (swithe) when a <with> code clause finishes 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikegpl/swithe
project_urls =
    Bug Tracker = https://github.com/mikegpl/swithe/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy ~=1.2

[options.packages.find]
where = src